displayed albums, tracks in recycler views with design , and album tracks still displayed with list view (need to be changed into recycler view) also added search bar activity to handle the results

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,17 @@
                 android:scrollbars="horizontal" />
         </LinearLayout>
 
+        <ImageButton
+            android:id="@+id/searchimagebutton"
+            android:layout_width="49dp"
+            android:layout_height="43dp"
 
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="361dp"
+            android:layout_marginBottom="31dp"
+            android:background="#D12121"
+            android:backgroundTint="#B81717"
+            android:hint="Search" />
 
         <LinearLayout
             android:layout_width="match_parent"
