--- a/app/src/main/res/drawable/rounded_dropdown_item_background.xml
+++ b/app/src/main/res/drawable/rounded_dropdown_item_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#BDBDBD" />
+    <solid android:color="@color/transparent" />
     <corners android:radius="8dp" />
 
 </shape>
