--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -2,12 +2,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/rounded_dropdown_item_background">
+    android:background="@drawable/rounded_dropdown_item_background"
+    >
 
     <TextView
         android:id="@+id/dropdown_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:textColor="#000000" />
+        android:background="@color/transparent"
+        android:textColor="#FFFFFF"
+        />
 </LinearLayout>
