--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -110,13 +110,14 @@
         app:tint="@color/FlatWhite"
         tools:ignore="MissingConstraints" />
 
+    <!--RecyclerView-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlistsRecycleView"
-        android:layout_width="121dp"
-        android:layout_height="87dp"
-        android:layout_marginTop="180dp"
+        android:layout_width="158dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.462"
+        app:layout_constraintHorizontal_bias="0.873"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/navigationBarPlaylist" />
 
