--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -63,7 +63,7 @@
         android:text="No result found."
         android:visibility="gone"
         android:layout_gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/navigationBar"
+        app:layout_constraintTop_toBottomOf="@id/controlsLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
