--- a/app/src/main/res/menu/add_to_playlist_menu.xml
+++ b/app/src/main/res/menu/add_to_playlist_menu.xml
@@ -2,5 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_add_to_playlist"
-        android:title="Add to Playlist" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:icon="@drawable/playlist_add_24"
+        android:title="Add to playlists" />
 </menu>
