--- a/app/src/main/res/layout/horizontal_each_item.xml
+++ b/app/src/main/res/layout/horizontal_each_item.xml
@@ -18,9 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-
-        />
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
 <!--    <TextView-->
 <!--        android:id="@+id/HRAlbumTitle"-->
