--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/staticImage"
+<!--        <ImageView-->
+<!--            android:id="@+id/staticImage"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="342dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginTop="35dp"-->
+<!--            app:srcCompat="@android:drawable/btn_star" />-->
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/imageSlider"
             android:layout_width="match_parent"
             android:layout_height="342dp"
             android:layout_gravity="center"
-            android:layout_marginTop="35dp"
-            app:srcCompat="@android:drawable/btn_star" />
+            android:layout_marginTop="35dp" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
