--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,81 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@drawable/home_background_overlay">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/staticImage"
+<!--        <TextView-->
+<!--            android:id="@+id/userNameTextView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Welcome, UserName"-->
+<!--            android:textSize="25sp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textColor="@color/FlatWhite"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="16dp"/>-->
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/imageSlider"
             android:layout_width="match_parent"
             android:layout_height="342dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="35dp"
-            app:srcCompat="@android:drawable/btn_star" />
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="16dp" />
+<!--            android:layout_below="@id/userNameTextView"-->
+
+
+        <TextView
+            android:id="@+id/mostPopularTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Discover Albums"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_below="@id/imageSlider"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            tools:context=".MainActivity">
+            android:id="@+id/horizontalContainer"
+            android:layout_below="@id/mostPopularTextView"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/horizontalRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="400dp"
                 android:scrollbars="horizontal" />
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/searchimagebutton"
-            android:layout_width="49dp"
-            android:layout_height="43dp"
-
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="361dp"
-            android:layout_marginBottom="31dp"
-            android:background="#D12121"
-            android:backgroundTint="#B81717"
-            android:hint="Search" />
+        <TextView
+            android:id="@+id/suggestionsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Discover New Songs"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_below="@id/horizontalContainer"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp">
+            android:orientation="vertical"
+            android:layout_below="@id/suggestionsTextView"
+            android:layout_marginTop="16dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/verticalRecyclerView"
@@ -55,10 +83,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginTop="550dp"
                 android:layout_weight="1"
                 android:visibility="visible" />
         </LinearLayout>
-
     </RelativeLayout>
 </ScrollView>
