--- a/app/src/main/res/layout/horizontal_each_item.xml
+++ b/app/src/main/res/layout/horizontal_each_item.xml
@@ -1,41 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
-    app:cardCornerRadius="4dp"
-    android:layout_alignParentStart="false"
-    android:layout_marginTop="20dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp">
+    android:layout_marginEnd="8dp">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    <FrameLayout
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="@drawable/album_item_background"
+        android:clipToPadding="false"
+        android:padding="8dp">
 
-    <ImageButton
-        android:id="@+id/HRImageButtonRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
-
-<!--    <TextView-->
-<!--        android:id="@+id/HRAlbumTitle"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="This is text"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_alignParentStart="true"-->
-<!--        android:layout_alignParentEnd="true"-->
-<!--        android:gravity="center"-->
-<!--        android:textSize="@dimen/_16dp"-->
-<!--        android:textStyle="bold"-->
-<!--        android:background="#8C8A8A"-->
-<!--        />-->
+        <ImageButton
+            android:id="@+id/HRImageButtonRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:srcCompat="@android:drawable/btn_star_big_on"
+            android:background="@drawable/album_image_background" />
+       <TextView
+        android:id="@+id/HRAlbumTitle"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_gravity="bottom"
+           android:gravity="center"
+           android:text="Album Title"
+           android:textColor="@android:color/white"
+           android:textSize="14sp"
+           android:maxLines="1"
+           android:ellipsize="end"/>
+    </FrameLayout>
 
 </RelativeLayout>
-
-
-</androidx.cardview.widget.CardView>
-
