--- a/app/src/main/res/layout/activity_create_playlist.xml
+++ b/app/src/main/res/layout/activity_create_playlist.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/overlay"
     android:id="@+id/playlistaccess"
-    tools:context=".CreatePlaylistActivity">
+    tools:context=".Activites.CreatePlaylistActivity">
 
     <EditText
         android:id="@+id/playlistNameEditText"
