--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,20 +6,25 @@
 
     <ImageButton
         android:id="@+id/playlistImageButton"
-        android:layout_width="190dp"
+        android:layout_width="160dp"
         android:layout_height="169dp"
         android:src="@drawable/rhythemix"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:background="?android:selectableItemBackground"
-        android:scaleType="fitXY"></ImageButton>
+        android:radius="50dp"
+        android:scaleType="fitXY"
+        style="@style/MyImageButtonStyle"
+        />
 
     <TextView
         android:id="@+id/playlistTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/playlist_fragment"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="16dp"
+        android:fontFamily="@font/ios_bold"
         android:layout_below="@id/playlistImageButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp" />
