--- a/app/src/main/res/layout/each_item.xml
+++ b/app/src/main/res/layout/each_item.xml
@@ -70,5 +70,10 @@
         android:focusable="true"
         android:onClick="showPopupMenu"/>
 
+    <ImageButton
+        android:id="@+id/addToPlayList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></ImageButton>
+
 
 </LinearLayout>
