--- a/app/src/main/res/layout/activity_add_to_favorites.xml
+++ b/app/src/main/res/layout/activity_add_to_favorites.xml
@@ -19,4 +19,16 @@
             android:layout_weight="1"
             android:visibility="visible" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/favTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="149dp"
+        android:layout_marginEnd="204dp"
+        android:layout_marginBottom="692dp"
+        android:text="TextView" />
 </RelativeLayout>
