--- a/app/src/main/res/layout/activity_album_tracks.xml
+++ b/app/src/main/res/layout/activity_album_tracks.xml
@@ -1,79 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="50dp">-->
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/verticalRecyclerView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:visibility="visible" />-->
-<!--    </LinearLayout>-->
-
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        app:cardCornerRadius="4dp"-->
-<!--        app:cardBackgroundColor="@color/transparent"-->
-<!--        android:layout_marginHorizontal="10dp"-->
-<!--        android:layout_marginVertical="2dp"-->
-<!--        >-->
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:layout_margin="10dp"-->
-<!--        android:background="@drawable/shape"-->
-<!--        android:gravity="center"-->
-<!--        android:backgroundTint="@color/transparent"-->
-<!--        >-->
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    android:background="@drawable/home_background_overlay"
+    tools:context=".activities.AlbumTracksActivity">
 
 
-<!--        <ImageView-->
-<!--            android:id="@+id/musicImage"-->
-<!--            android:layout_width="100dp"-->
-<!--            android:layout_height="100dp"-->
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_back_album_track"
+            android:background="@color/transparent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-<!--            app:srcCompat="@android:drawable/btn_star_big_on" />-->
+        <!-- Album Info Layout -->
+        <LinearLayout
+            android:id="@+id/albumInfoLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="28dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
+                <!-- Album Cover -->
+                <ImageView
+                    android:id="@+id/activityTitleCover"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginStart="16dp"
+                    android:text="Library"
+                    android:textColor="#FFFFFF"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
-<!--        <TextView-->
-<!--            android:id="@+id/musicTitle"-->
-<!--            android:layout_width="80dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="3"-->
-<!--            android:gravity="center"-->
-<!--            android:textColor="@color/FlatWhite"-->
-<!--            android:text="TextView"-->
-<!--            />-->
+                <!-- Album Name -->
+                <TextView
+                    android:id="@+id/activityTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="Library"
+                    android:textColor="#FFFFFF"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="25dp"/>
+        </LinearLayout>
 
-<!--        <ImageButton-->
-<!--            android:id="@+id/toggleButton"-->
-<!--            android:layout_width="2dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:background="#00E65100"-->
-<!--            android:backgroundTint="#CA370A"-->
-<!--            android:contentDescription="TODO"-->
-<!--            android:gravity="center"-->
-<!--            android:hapticFeedbackEnabled="true"-->
-<!--            android:src="@android:drawable/ic_media_play"-->
+        <!-- RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/albumRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            android:paddingBottom="@dimen/bottom_back_stack_spacing"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintTop_toBottomOf="@+id/albumInfoLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:layoutManager="LinearLayoutManager"
+            tools:orientation="vertical"
+            tools:listitem="@layout/album_track_item" />
 
-<!--            />-->
-<!--    </LinearLayout>-->
-<!--    </androidx.cardview.widget.CardView>-->
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
