--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/suggestionsTextView"
                 android:layout_marginTop="16dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginBottom="40dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/verticalRecyclerView"
