--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,19 +6,63 @@
     android:layout_height="match_parent"
     tools:context=".activities.SearchActivity">
 
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView"
+            android:layout_width="335dp"
+            android:layout_height="41dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="36dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/rounded_border"
+            android:backgroundTint="@color/transparent"
+            android:drawablePadding="8dp"
+            android:gravity="center"
+            android:hint="Search"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:singleLine="true"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            app:dropDownBackgroundTint="@color/transparent"
+            android:popupBackground="@android:color/transparent"
+            android:dropDownVerticalOffset="20dp"
+            tools:ignore="MissingConstraints" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="56dp"
+            android:layout_height="24dp"
+            android:layout_marginRight="5dp"
+            android:layout_alignStart="@+id/autoCompleteTextView"
+            android:layout_alignTop="@+id/autoCompleteTextView"
+            android:layout_alignEnd="@+id/autoCompleteTextView"
+            android:layout_alignBottom="@+id/autoCompleteTextView"
+            android:layout_marginStart="31dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="248dp"
+            android:layout_marginBottom="10dp"
+            app:srcCompat="@android:drawable/ic_menu_search"
+            tools:ignore="MissingConstraints" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_marginTop="78dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="70dp"
+            tools:layout_editor_absoluteY="265dp" />
+
+
+
     <!--Main NavBar-->
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="188dp"
-        android:text="Search"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <include
         android:id="@+id/bottom_navigation"
         layout="@layout/navbar"
