--- a/app/src/main/res/layout/activity_album_tracks.xml
+++ b/app/src/main/res/layout/activity_album_tracks.xml
@@ -45,6 +45,13 @@
                 <!-- Album Name -->
                 <TextView
                     android:id="@+id/activityTitle"
+                    android:maxLines="1"
+                    android:ellipsize="marquee"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -60,10 +67,9 @@
             android:id="@+id/albumRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:clipToPadding="false"
             android:overScrollMode="never"
-            android:paddingBottom="@dimen/bottom_back_stack_spacing"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintTop_toBottomOf="@+id/albumInfoLayout"
             app:layout_constraintStart_toStartOf="parent"
