--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/home_background_overlay">
+    android:background="@drawable/libraryoverlay">
 
     <!-- Transparent Top Navbar -->
     <com.google.android.material.appbar.AppBarLayout
