--- a/app/src/main/res/layout/activity_add_to_favorites.xml
+++ b/app/src/main/res/layout/activity_add_to_favorites.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backward_color"
     tools:context=".Activities.AddToFavoritesActivity">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favoritesRecyclerView"
+        android:layout_width="409dp"
+        android:layout_height="618dp"
+        android:layout_marginBottom="100dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:paddingVertical="150dp"
+        android:paddingBottom="@dimen/bottom_back_stack_spacing"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layoutManager="LinearLayoutManager"
+        tools:listitem="@layout/favorite_each_item"
+        tools:orientation="vertical" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/favoritesRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:visibility="visible" />
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/favTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="149dp"
-        android:layout_marginEnd="204dp"
-        android:layout_marginBottom="692dp"
-        android:text="TextView" />
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
