--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/allsongsoverly"
+    android:background="@drawable/libraryoverlay"
     tools:context=".Activities.LibraryActivity">
 
     <!--Library Text-->
@@ -22,28 +22,51 @@
         android:layout_marginTop="16dp" />
 
     <!--SearchBar-->
-    <EditText
-        android:id="@+id/searchEditText"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/searchTextInputLayout"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="56dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/rounded_border"
-        android:drawableStart="@drawable/ic_search"
-        android:drawablePadding="8dp"
-        android:hint="Search"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:singleLine="true"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
+        app:endIconMode="clear_text"
+        app:hintEnabled="false"
+        app:boxBackgroundMode="outline"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/searchEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_border"
+            android:drawableStart="@drawable/ic_search"
+            android:drawablePadding="8dp"
+            android:hint="Search"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:singleLine="true"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <!--Not found message-->
+    <TextView
+        android:id="@+id/noSongsFoundTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No result found."
+        android:visibility="gone"
+        android:layout_gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/controlsLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <!--Songs/Playlist NavBar-->
     <RadioGroup
@@ -58,15 +81,15 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchEditText">
+        app:layout_constraintTop_toBottomOf="@id/searchTextInputLayout">
 
         <RadioButton
             android:id="@+id/songsButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:button="@android:color/transparent"
             android:background="@android:color/transparent"
+            android:button="@android:color/transparent"
             android:gravity="center"
             android:text="Songs"
             android:textColor="#FFFFFF"
@@ -85,19 +108,45 @@
             android:textSize="16sp" />
     </RadioGroup>
 
-    <!--Shuffle Icon-->
-    <ImageView
-        android:id="@+id/shuffle_button"
-        android:layout_width="30dp"
-        android:layout_height="50dp"
+    <!-- Play All -->
+    <LinearLayout
+        android:id="@+id/controlsLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:paddingTop="13dp"
-        android:paddingBottom="13dp"
+        android:layout_marginTop="72dp"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchEditText"
-        app:srcCompat="@drawable/ic_shuffle"
-        app:tint="@color/FlatWhite" />
+        app:layout_constraintTop_toBottomOf="@id/searchTextInputLayout">
+
+        <!-- Play Icon -->
+        <ImageView
+            android:id="@+id/shuffle_button"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:paddingTop="1dp"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/round_play_circle_24"
+            app:tint="@color/FlatWhite" />
+
+        <TextView
+            android:id="@+id/playAllText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Play All"
+            android:textColor="@color/FlatWhite"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/numberOfSongsText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="(10)"
+            android:textColor="@color/FlatWhite"
+            android:textSize="20sp" />
+    </LinearLayout>
 
     <!--RecycleView-->
     <androidx.recyclerview.widget.RecyclerView
@@ -112,7 +161,7 @@
         app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/shuffle_button"
+        app:layout_constraintTop_toBottomOf="@id/controlsLayout"
         app:layout_constraintVertical_bias="0.0"
         tools:layoutManager="LinearLayoutManager"
         tools:listitem="@layout/song_item_library"
