--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -21,38 +21,8 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
-  <!--SearchBar-->
-  <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/searchTextInputLayoutPlaylists"
-      android:layout_width="0dp"
-      android:layout_height="56dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginTop="24dp"
-      android:layout_marginEnd="32dp"
-      app:boxBackgroundMode="outline"
-      app:endIconMode="clear_text"
-      app:hintEnabled="false"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/playlistTitleTextView">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/searchEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_border"
-        android:drawableStart="@drawable/ic_action_search"
-        android:drawablePadding="8dp"
-        android:hint="Search"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:singleLine="true"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF" />
-  </com.google.android.material.textfield.TextInputLayout>
+
 
   <!--Songs/Playlist NavBar-->
   <RadioGroup
@@ -60,13 +30,13 @@
       android:layout_width="0dp"
       android:layout_height="48dp"
       android:layout_marginStart="32dp"
-      android:layout_marginTop="16dp"
+      android:layout_marginTop="40dp"
       android:layout_marginEnd="32dp"
       android:background="@android:color/transparent"
       android:orientation="horizontal"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/searchTextInputLayoutPlaylists">
+      app:layout_constraintTop_toBottomOf="@id/playlistTitleTextView">
 
     <RadioButton
         android:id="@+id/songsButton"
@@ -150,5 +120,16 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.534" />
+
+  <!--Main NavBar-->
+  <include
+      android:id="@+id/bottom_navigation"
+      layout="@layout/navbar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
