--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,8 +14,6 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="32dp"
-        app:boxStrokeColor="@color/white"
-        app:boxStrokeWidth="2dp"
         app:endIconMode="clear_text"
         app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,9 +28,8 @@
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:drawableStart="@drawable/ic_search"
+            android:background="@drawable/rounded_border"
             android:drawablePadding="8dp"
-            app:boxStrokeColor="@color/white"
-            app:boxStrokeWidth="2dp"
             android:hint="Search"
             android:imeOptions="actionSearch"
             android:inputType="text"
