--- a/app/src/main/res/layout/favorite_each_item.xml
+++ b/app/src/main/res/layout/favorite_each_item.xml
@@ -12,7 +12,12 @@
         android:id="@+id/panel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
     <TextView
         android:id="@+id/number"
@@ -29,15 +34,25 @@
         android:textSize="16sp"
         android:textStyle="bold"/>
 
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/image"
+        app:layout_constraintStart_toEndOf="@id/number"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="10dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:scaleType="centerInside"
+        android:padding="6dp"
+        app:riv_corner_radius="4dp"
+        tools:src="@drawable/ic_music_style"
+        app:riv_border_width="1dp"
+        app:riv_border_color="#44F5F5F5"/>
+
     <TextView
-        android:id="@+id/songName"
+        android:id="@+id/title"
         android:maxLines="1"
-        android:ellipsize="marquee"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
-        android:singleLine="true"
+        android:ellipsize="end"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/FlatWhite"
@@ -45,32 +60,11 @@
         android:textSize="15sp"
         tools:text="Galaxy Supernova"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/number"
-        app:layout_constraintEnd_toStartOf="@id/quick_play_pause"
+        app:layout_constraintStart_toEndOf="@id/image"
+        app:layout_constraintEnd_toStartOf="@id/preview_button_container"
         app:layout_constraintBottom_toTopOf="@id/description"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"/>
-
-    <ImageView
-        android:id="@+id/quick_play_pause"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:padding="11dp"
-        app:layout_constraintStart_toEndOf="@id/songName"
-        app:layout_constraintTop_toTopOf="@id/songName"
-        app:layout_constraintBottom_toBottomOf="@id/songName"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:src="@drawable/ic_volume_up_black_24dp"
-        tools:visibility="gone"
-        app:tint="@color/FlatWhite" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelinePauseEnd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.7" />
+        app:layout_constraintVertical_chainStyle="packed"
+        android:layout_marginStart="10dp"/>
 
     <TextView
         android:id="@+id/description"
@@ -84,9 +78,9 @@
         android:textStyle="normal"
         android:textColor="#AAF5F5F5"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/songName"
-        app:layout_constraintStart_toStartOf="@id/songName"
-        app:layout_constraintEnd_toEndOf="@id/songName"/>
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintStart_toStartOf="@id/title"
+        app:layout_constraintEnd_toEndOf="@id/title"/>
 
     <RelativeLayout
         android:id="@+id/preview_button_container"
@@ -94,17 +88,16 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/menu_button"
         android:padding="8dp">
 
         <ImageButton
             android:id="@+id/preview_button"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/round_play_circle_24"
+            android:src="@drawable/ic_pause"
             app:tint="@color/FlatWhite"
             android:background="@drawable/ripple_oval"
-            android:clickable="true"
             android:alpha="0.9"/>
 
         <ProgressBar
@@ -117,4 +110,31 @@
             android:indeterminate="true"
             android:indeterminateTint="@color/FlatWhite"/>
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/menu_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="45dp"
+        android:layout_marginEnd="6dp"
+        android:layout_height="45dp"
+        app:srcCompat="@drawable/delete_favorite"
+        android:scaleType="centerInside"
+        android:background="@drawable/ripple_oval"
+        app:tint="#DDF5F5F5" />
+
+    <ImageView
+        android:id="@+id/quick_play_pause"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="11dp"
+        app:layout_constraintStart_toStartOf="@id/image"
+        app:layout_constraintTop_toTopOf="@id/image"
+        app:layout_constraintBottom_toBottomOf="@id/image"
+        app:layout_constraintEnd_toEndOf="@id/image"
+        tools:src="@drawable/ic_volume_up_black_24dp"
+        tools:visibility="gone"
+        app:tint="@color/FlatWhite" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
