--- a/app/src/main/res/layout/album_track_item.xml
+++ b/app/src/main/res/layout/album_track_item.xml
@@ -9,41 +9,26 @@
     android:layout_gravity="fill_horizontal"
     android:layout_marginTop="10dp">
 
-            <!-- Number -->
-            <TextView
-                android:id="@+id/albumNumber"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                tools:text="1"
-                android:textColor="#AAEEEEEE"
-                android:layout_gravity="center_vertical"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
 
             <!-- Image -->
     <ImageView
         android:id="@+id/albumImage"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="6dp"
         android:padding="6dp"
         android:scaleType="centerInside"
+        android:background="@drawable/rounded_border"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/albumNumber"
         app:layout_constraintTop_toTopOf="parent"
         app:riv_border_color="#44F5F5F5"
         app:riv_border_width="1dp"
         app:riv_corner_radius="4dp"
         app:srcCompat="@drawable/ic_music_style"
-        tools:src="@drawable/ic_music_style" />
+        tools:src="@drawable/ic_music_style"
+        tools:ignore="MissingConstraints" />
 
     <!-- Title -->
-
     <TextView
         android:id="@+id/albumTitle"
         android:layout_width="0dp"
@@ -52,7 +37,7 @@
         android:layout_marginTop="20dp"
         android:ellipsize="end"
         android:textColor="@color/FlatWhite"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/albumImage"
         app:layout_constraintTop_toTopOf="parent"
