--- a/app/src/main/res/layout/favorite_each_item.xml
+++ b/app/src/main/res/layout/favorite_each_item.xml
@@ -19,24 +19,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <TextView
-        android:id="@+id/number"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        tools:text="1"
-        android:textColor="#AAEEEEEE"
-        android:layout_gravity="center_vertical"
-        android:gravity="center"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textSize="16sp"
-        android:textStyle="bold"/>
-
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/image"
-        app:layout_constraintStart_toEndOf="@id/number"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="10dp"
@@ -47,94 +31,101 @@
         app:riv_corner_radius="4dp"
         tools:src="@drawable/ic_music_style"
         app:riv_border_width="1dp"
-        app:riv_border_color="#44F5F5F5"/>
-
-    <TextView
-        android:id="@+id/title"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/FlatWhite"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        tools:text="Galaxy Supernova"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/image"
-        app:layout_constraintEnd_toStartOf="@id/preview_button_container"
-        app:layout_constraintBottom_toTopOf="@id/description"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:layout_marginStart="10dp"/>
-
-    <TextView
-        android:id="@+id/description"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:layout_width="0dp"
-        android:singleLine="true"
-        android:layout_height="wrap_content"
-        tools:text="Girls 'Generation"
-        android:textSize="12sp"
-        android:textStyle="normal"
-        android:textColor="#AAF5F5F5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintStart_toStartOf="@id/title"
-        app:layout_constraintEnd_toEndOf="@id/title"/>
+        app:riv_border_color="#44F5F5F5"
+        tools:ignore="MissingConstraints" />
 
     <RelativeLayout
         android:id="@+id/preview_button_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/menu_button"
-        android:padding="8dp">
-
-        <ImageButton
-            android:id="@+id/preview_button"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:src="@drawable/ic_pause"
-            app:tint="@color/FlatWhite"
-            android:background="@drawable/ripple_oval"
-            android:alpha="0.9"/>
+        app:layout_constraintStart_toStartOf="@id/panel"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toStartOf="@id/menu_button"
+    android:padding="8dp">
 
         <ProgressBar
-            android:id="@+id/progress_bar"
-            style="?android:attr/progressBarStyleSmall"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_centerInParent="true"
-            android:visibility="gone"
-            android:indeterminate="true"
-            android:indeterminateTint="@color/FlatWhite"/>
-    </RelativeLayout>
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/FlatWhite"/>
+</RelativeLayout>
+
+<TextView
+android:id="@+id/title"
+android:maxLines="1"
+android:ellipsize="end"
+android:layout_width="0dp"
+android:layout_height="wrap_content"
+android:textColor="@color/FlatWhite"
+android:textStyle="bold"
+android:textSize="7sp"
+tools:text="Galaxy Supernova"
+app:layout_constraintTop_toTopOf="parent"
+app:layout_constraintStart_toEndOf="@id/image"
+app:layout_constraintEnd_toStartOf="@id/preview_button_container"
+app:layout_constraintBottom_toTopOf="@id/description"
+app:layout_constraintVertical_chainStyle="packed"
+android:layout_marginStart="10dp"/>
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textColor="#AAF5F5F5"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/title"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        tools:text="Girls 'Generation" />
 
     <ImageView
         android:id="@+id/menu_button"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="45dp"
-        android:layout_marginEnd="6dp"
         android:layout_height="45dp"
-        app:srcCompat="@drawable/delete_favorite"
-        android:scaleType="centerInside"
         android:background="@drawable/ripple_oval"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/preview_button_container"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.555"
+        app:srcCompat="@drawable/delete_favorite"
         app:tint="#DDF5F5F5" />
 
     <ImageView
-        android:id="@+id/quick_play_pause"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="11dp"
-        app:layout_constraintStart_toStartOf="@id/image"
-        app:layout_constraintTop_toTopOf="@id/image"
-        app:layout_constraintBottom_toBottomOf="@id/image"
-        app:layout_constraintEnd_toEndOf="@id/image"
-        tools:src="@drawable/ic_volume_up_black_24dp"
-        tools:visibility="gone"
-        app:tint="@color/FlatWhite" />
+android:id="@+id/quick_play_pause"
+android:layout_width="0dp"
+android:layout_height="0dp"
+
+app:layout_constraintBottom_toBottomOf="@id/image"
+app:layout_constraintEnd_toEndOf="@id/image"
+app:layout_constraintStart_toStartOf="@id/image"
+app:layout_constraintTop_toTopOf="@id/image"
+tools:src="@drawable/ic_volume_up_black_24dp"
+tools:visibility="gone"
+app:tint="@color/FlatWhite" />
+
+    <ImageButton
+        android:id="@+id/preview_button"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:alpha="0.9"
+        android:background="@drawable/ripple_oval"
+        android:src="@drawable/ic_pause"
+        app:tint="@color/FlatWhite"
+        tools:layout_editor_absoluteX="183dp"
+        tools:layout_editor_absoluteY="5dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
